@@ -13,14 +13,14 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id 'pmd'
-    id 'com.github.ben-manes.versions' version '0.50.0'
+    id 'com.github.ben-manes.versions' version '0.51.0'
     id "info.solidsoft.pitest" version '1.15.0'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.owasp.dependencycheck' version '8.4.3'
+    id 'org.owasp.dependencycheck' version '9.0.9'
     id 'org.sonarqube' version '3.5.0.2730'
     id 'org.springframework.boot' version '2.7.18'
-    id 'uk.gov.hmcts.java' version '0.12.49'
-    id 'au.com.dius.pact' version '4.6.3'
+    id 'uk.gov.hmcts.java' version '0.12.56'
+    id 'au.com.dius.pact' version '4.6.6'
     id "io.freefair.lombok" version "6.6.3"
 }
 
@@ -30,10 +30,10 @@ apply plugin: 'project-report'
 apply plugin: 'idea'
 
 def versions = [
-    junit              : '5.10.1',
-    junitPlatform      : '1.10.1',
+    junit              : '5.10.2',
+    junitPlatform      : '1.10.2',
     gradlePitest       : '1.5.1',
-    pitest             : '1.15.3',
+    pitest             : '1.15.7',
     reformLogging      : '5.1.7',
     reformHealthStarter: '0.0.5',
     restAssured        : '5.3.2',
@@ -42,7 +42,7 @@ def versions = [
     springHystrix      : '2.2.10.RELEASE',
     pact_version       : '4.1.38',
     springDoc          : '1.7.0',
-    springCloud        : '3.1.8'
+    springCloud        : '3.1.9'
 ]
 
 mainClassName = 'uk.gov.hmcts.reform.iacasedocumentsapi.Application'
@@ -195,9 +195,13 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
     useJUnitPlatform()
     testClassesDirs = sourceSets.contractTest.output.classesDirs
     classpath = sourceSets.contractTest.runtimeClasspath
-
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
 
 project.ext {
     pactVersion = getCheckedOutGitCommitHash()
@@ -272,18 +276,18 @@ dependencyManagement {
         }
 
 
-        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.16.0') {
+        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.16.1') {
             entry 'jackson-databind'
             entry 'jackson-core'
             entry 'jackson-annotations'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.16.0') {
+        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.16.1') {
             entry 'jackson-dataformat-yaml'
             entry 'jackson-dataformat-csv'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.16.0') {
+        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.16.1') {
             entry 'jackson-datatype-jsr310'
             entry 'jackson-datatype-jdk8'
         }
@@ -309,7 +313,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: versions.springCloud
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.7'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.8'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
 
@@ -317,15 +321,14 @@ dependencies {
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server'
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose'
 
-
-
+    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
     // CVE-2019-17195
-    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.37.1'
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.37.3'
 
     // CVE-2021-27568
     implementation group: 'net.minidev', name: 'json-smart', version: '2.5.0'
 
-
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations'
@@ -333,6 +336,9 @@ dependencies {
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv'
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
+
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.13'
 
     implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.9'
 
@@ -348,8 +354,8 @@ dependencies {
 
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
 
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.83'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.83'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.85'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.85'
 
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.3.0'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
@@ -374,18 +380,23 @@ dependencies {
     testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
     testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
 
+    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.1', classifier: 'all', {
+        exclude group: 'commons-io', module: 'commons-io'
+        exclude group: 'org.apache.commons', module: 'commons-lang3'
+    }
+
     testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
 
-    testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.8') {
+    testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.10') {
         exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
     }
 
     //pact contract testing
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: "4.6.3"
+    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: "4.6.6"
 
-    contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.10.1")
-    contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.1")
-    contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.10.1')
+    contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
+    contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.2")
+    contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.10.2')
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
